src/objects/Benefit__c.object
<CustomObject>
    <fields>
        <fullName>In_Network__c</fullName>
        <label>In Network</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_Network__c</fullName>
        <label>Out Network</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_of_Service__c</fullName>
        <label>Place of Service</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <label>Policy</label>
        <referenceTo>Policy__c</referenceTo>
        <relationshipLabel>Benefits</relationshipLabel>
        <relationshipName>Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Category__c</fullName>
        <label>Service Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Benefit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>